# FullReco_SimuPhase1

./: .gitignore  .gitmodules  G4Ana.C  README.md
geo/: GeoSolenoid.root
src/: Ana_Hist.cc  Ana_Hist.hh  CheckField.cc  CheckField.h  Debug.hh  FullRecoConfig.cc  FullRecoConfig.hh  FullRecoEvent.cc  FullRecoEvent.hh  FullRecoEventZMQ.cc  FullRecoEventZMQ.hh  FullRecoTask.cc  FullRecoTask.hh  FullRecoTaskMT.cc  FullRecoTaskMT.hh  FullRecoTaskZMQ.cc  FullRecoTaskZMQ.hh  HitGnnStruct.hh  MTQueue.hh  MainData.cc  MainMonitor.cc  MainSimu.cc  Makefile  ReturnRes.hh  TBayesFinder.cc  TBayesFinder.h  TBuildDetectorLayerPlaneDAF.cc  TBuildDetectorLayerPlaneDAF.h  TBuildDetectorLayerPlaneDAF_MT.cc  TBuildDetectorLayerPlaneDAF_MT.h  TBuildDetectorLayerPlaneDAF_ZMQ.cc  TBuildDetectorLayerPlaneDAF_ZMQ.h  TBuildRestarter.cc  TBuildRestarter.h  TBuildWASACalibrationLayerPlane.cc  TBuildWASACalibrationLayerPlane.h  TCheckFiberTrack.cc  TCheckFiberTrack.h  TCheckFiberXUV.cc  TCheckFiberXUV.h  (+53 more)
src/Ana_Event/: AnaEvent_Metadata.cc  AnaEvent_Metadata.hh  Ana_Event.cc  Ana_Event.hh  Ana_EventNew.hh  Ana_EventNew_v14.cc  Ana_EventNew_v14.hh  Ana_EventNew_v16.cc  Ana_EventNew_v16.hh  Ana_EventNew_v16_linkdef.h  Ana_EventNew_vData.cc  Ana_EventNew_vData.hh  Ana_EventNew_vData_linkdef.h  Ana_WasaEvent.cc  Ana_WasaEvent.hh  Ana_WasaEvent_linkdef.h  MCAnaEvent.cc  MCAnaEvent.hh  MCAnaEventG4Sol.cc  MCAnaEventG4Sol.hh  MCAnaEventG4Sol_linkdef.h  MCAnaEvent_linkdef.h  Makefile  TDataHit.cc  TDataHit.hh  THypernucleus.cc  THypernucleus.hh  THyphiHitDet.cc  THyphiHitDet.hh  THyphiSimpleHit.cc  THyphiSimpleHit.hh  THyphiTrack.cc  THyphiTrack.hh  THyphiTrack_v2.cc  THyphiTrack_v2.hh  THyphiTrack_v3.cc  THyphiTrack_v3.hh  THyphiTrack_v4.cc  THyphiTrack_v4.hh  TMcHit.cc  (+9 more)
src/EventG4Sol/: Makefile  (+2 more)
src/Genfit2_v1/hyphi/: CMakeLists.txt
src/Genfit2_v1/hyphi/include/: GFHypFieldMap.h  GFHypRecoHit.h  HypDchRecoHit.h  HypDchRecoHit2.h  HypMeasurement.h  HypPixHit.h  StripHit.h  genfitHypHILinkDef.h
src/Genfit2_v1/hyphi/src/: GFHypFieldMap.cxx  GFHypRecoHit.cxx  HypDchRecoHit.cxx  HypDchRecoHit2.cxx  HypMeasurement.cxx  HypPixHit.cxx  StripHit.cxx
(+83 files in other folders)
